plugins {
    id "java"
    id "com.github.johnrengelman.shadow" version "7.1.0"
}

group "xyz.oribuin"
version "1.1.1"
sourceCompatibility = JavaVersion.VERSION_16
targetCompatibility = JavaVersion.VERSION_16

compileJava {
    options.compilerArgs += ['-parameters']
    options.encoding = "UTF-8"
}

repositories {
    mavenCentral()
    mavenLocal()

    maven { url "https://hub.spigotmc.org/nexus/content/repositories/snapshots/" }
    maven { url "https://repo.rosewooddev.io/repository/public/" }
    maven { url "https://repo.extendedclip.com/content/repositories/placeholderapi/" }
    maven { url "https://repo.codemc.org/repository/maven-public" }
    maven { url "https://jitpack.io" }
}

dependencies {
    compileOnly 'org.spigotmc:spigot:1.17'
    compileOnly "me.clip:placeholderapi:2.10.9"
    compileOnly 'org.jetbrains:annotations:23.0.0'
    compileOnly 'com.github.oraxen:oraxen:afc4903680'


    implementation 'dev.rosewood:rosegarden:1.1.0.29-SNAPSHOT'
    implementation 'xyz.oribuin:ori-gui:1.0.11'
}

shadowJar {
    archiveClassifier.set(null)
    relocate('xyz.oribuin.gui', "${project.group}.eternaltags.libs.gui")
    relocate('dev.rosewood.rosegarden', "${project.group}.eternaltags.libs.rosegarden")
    relocate('org.slf4j', "${project.group}.eternaltags.libs.slf4j")
    relocate('com.zaxxer.hikari', "${project.group}.eternaltags.libs.hikari")
}

tasks.getByName("build").dependsOn("shadowJar")